test/configCases/errors/entry-not-found/errors.js
module.exports = [
	[/^Module not found/, /.\/index\.js/]
];
